[gd_scene load_steps=5 format=3 uid="uid://cy3c0mwjqfmdt"]

[ext_resource type="Script" path="res://lib/plantable_dirt.gd" id="1_kmcn8"]
[ext_resource type="SpriteFrames" uid="uid://ce32khfwu8tpa" path="res://assets/sprites/tiles/dirt.tres" id="2_0nap0"]
[ext_resource type="SpriteFrames" uid="uid://vblaomqhg31c" path="res://assets/sprites/plants/plants.tres" id="3_8nrwq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fvqgn"]
size = Vector2(16, 16)

[node name="PlantableDirt" type="Node2D"]
script = ExtResource("1_kmcn8")

[node name="Dirt" type="AnimatedSprite2D" parent="."]
position = Vector2(8, 8)
sprite_frames = ExtResource("2_0nap0")
animation = &"dirt_2"

[node name="Plant" type="AnimatedSprite2D" parent="."]
position = Vector2(8, 5)
sprite_frames = ExtResource("3_8nrwq")
animation = &"wheat_1"

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(8, 8)
shape = SubResource("RectangleShape2D_fvqgn")
debug_color = Color(0, 0.6, 0.701961, 0.254902)

[node name="DirtTime" type="Timer" parent="."]

[node name="PlantTime" type="Timer" parent="."]

[connection signal="animation_changed" from="Dirt" to="." method="_on_dirt_animation_changed"]
[connection signal="timeout" from="DirtTime" to="." method="_on_dirt_time_timeout"]
[connection signal="timeout" from="PlantTime" to="." method="_on_plant_time_timeout"]
